--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'Voyages to the Pacific coast'
 - !lcsh 'Leighton, Caroline C.'
 - !lcc 'F850.5'
+- GITenberg
 title: 'Life at Puget Sound: With Sketches of Travel in Washington Territory, British
   Columbia, Oregon and California'
 url: http://www.gutenberg.org/ebooks/24816
